updated new javascript links

--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
 										<a href="http://html.net" target="_blank">HTML.net</a>
                     <a href="https://www.youtube.com/user/codingmath" target="_blank">Coding Math</a>
                     <a href="https://scotch.io" target="_blank">Scotch.io</a>
-                    <a href="https://egghead.io" target="_blank">Egghead.io</a></td>
+                    <a href="https://egghead.io" target="_blank">Egghead.io</a>
 										<a href="https://paulund.co.uk/c/tutorials" target="_blank">Paulund Tutorials</a></td>
                     <td><p>Contains reference list of HTML/CSS/Javascript/SQL/PHP.Contains useful info with basic and short explanations.Short lessons include html5,css,php and javascript.<br>
-                    Useful videos on how to use math for coding. Scotch.io has tutorials on AngularJS, NodeJS, and other libraries. EggHead.io has courses for Redux,NodeJS, Elm and React.</p></td>
-                  </tr>
+                    Useful videos on how to use math for coding. Scotch.io has tutorials on AngularJS, NodeJS, and other libraries. EggHead.io has courses for Redux,NodeJS, Elm and React.</p>
+									</td>
+
+									</tr>
                   <tr>
                     <td><a href="http://tutorialspoint.com" target="_blank">Tutorial Point </a>
                     <a href="http://htmldog.com" target="_blank">HTML Dog</a>
@@ -161,8 +163,7 @@
                         <a href="http://glyphicons.com" target="_blank">Glyphicons</a>
                         <a href="https://unsplash.com" target="_blank">UnSplash</a>
                         <a href="http://line25.com/articles/12-free-repeating-pixel-patterns-for-photoshop" target="_blank">Pixel Patterns</a>
-                        </td>
-                        <a href="http://www.svgeneration.com" target="_blank">SVGeneration</a>
+                        <a href="http://www.svgeneration.com" target="_blank">SVGeneration</a></td>
                         <td><p>Free Icons.<br>
                             Glyphicons has a basic free pack for social icons and paid packs for more formats and icons.<br>
                             UnPlash are free high res images. Useful pixel pattern pack. SVGeneration creates svg on browser.</p></td>
@@ -408,6 +409,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <table border="">
+												<tr>
+												<td>Javascript Resources</td>
+												<td><a href="http://js-tutorial.com" target="_blank">JS-Tutorial</a>
+												</td>
+												<td><p>JS-Tutorial has articles and verious plugins.</p></td>
+												</tr>
                         <tr>
                         <td>Canvas JS Libraries</td>
                         <td><a href="http://paperjs.org" target="_blank">PaperJS</a>
@@ -425,8 +432,30 @@
                         </tr>
                         <tr>
                         <td>Javascript Libraries</td>
-                        <td><a href="http://dynamicsjs.com" target="_blank">DynamicJS</a></td>
-                        <td><p>DynamicJS is for physics effects.</p></td>
+                        <td><a href="http://dynamicsjs.com" target="_blank">DynamicJS</a>
+													<a href="http://requirejs.org" target="_blank">RequireJS</a>
+												</td>
+                        <td><p>DynamicJS is for physics effects. RequireJS is a JavaScript file and module loader.</p></td>
+                        </tr>
+												<tr>
+                        <td>Javascript Plugins</td>
+                        <td><a href="http://prinzhorn.github.io/skrollr/" target="_blank">Skrollr</a>
+													<a href="http://ignitersworld.com/lab/scrollmenu/" target="_blank">ScrollMenuJS</a>
+													<a href="https://tympanus.net/codrops/category/blueprints/" target="_blank">Blueprints</a>
+												</td>
+                        <td><p>Stand-alone parallax scrolling library for mobile (Android + iOS) and desktop and No jQuery.<br>
+												ScrollMenu is a nav bar with scroll effect.<br>
+												The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style.<br>
+												</p></td>
+                        </tr>
+												<tr>
+                        <td>JQuery</td>
+                        <td><a href="https://www.thinkful.com/learn/intro-to-jquery/?utm_source=tf_gh_pages_guide&utm_medium=tf_relevant_guide&utm_campaign=tf_guides" target="_blank">Thinkful Tutorial</a>
+													<a href="http://joaopereirawd.github.io/animatedModal.js/" target="_blank">AnimatedModalJS</a>
+												</td>
+                        <td><p>Tutorials and resources.<br>
+												AnimatedModalJS is a jQuery plugin to create a fullscreen modal with CSS3 transitions. See <a href="http://js-tutorial.com/animatedmodaljs-1467" target="_blank">ScrollMenuJS</a> for more demos that show usage as a modal for a site not just image.<br>
+												</p></td>
                         </tr>
                         <tr>
                         <td><a href="http://bittersweetryan.github.io/jasmine-presentation/#slide-0" target="_blank">Jasmine Unit Testing</a></td>
