Added a few more links

--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                   </tr>
                     <tr>
                     <td><a href="https://thimble.mozilla.org/en-US/"target="_blank">Thimble</a>
-                    <a href="http://jsbin.com/?html,output" target="_blank">JSBin</a></td>
+                    <a href="http://jsbin.com/?html,output" target="_blank">JSBin</a>
+										<a href="http://www.bootply.com" target="_blank">Bootply</a>
+										</td>
                     <td>Browser code editors.</td>
                     </tr>
                     <tr>
@@ -163,10 +165,13 @@
                         <a href="http://glyphicons.com" target="_blank">Glyphicons</a>
                         <a href="https://unsplash.com" target="_blank">UnSplash</a>
                         <a href="http://line25.com/articles/12-free-repeating-pixel-patterns-for-photoshop" target="_blank">Pixel Patterns</a>
-                        <a href="http://www.svgeneration.com" target="_blank">SVGeneration</a></td>
+                        <a href="http://www.svgeneration.com" target="_blank">SVGeneration</a>
+												<a href="http://www.webhostinghub.com/glyphs/" target="_blank">WebHostingHub</a>
+											</td>
                         <td><p>Free Icons.<br>
                             Glyphicons has a basic free pack for social icons and paid packs for more formats and icons.<br>
-                            UnPlash are free high res images. Useful pixel pattern pack. SVGeneration creates svg on browser.</p></td>
+                            UnPlash are free high res images. Useful pixel pattern pack. SVGeneration creates svg on browser.<br>
+													WebHostingHub glyphs can be added locally to apps or into html.</p></td>
                     </tr>
                     <tr>
                         <td><a href="http://960.gs" target="_blank">960 grid system</a>
@@ -181,9 +186,12 @@
                     <tr>
                         <td><a href="https://fonts.google.com" target="_blank">Google Fonts</a>
                         <a href="https://www.google.com/webdesigner" target="_blank">Google Web Designer</a>
-                        <a href="https://mapjam.com" target="_blank">Mapjam</a></td>
+                        <a href="https://mapjam.com" target="_blank">Mapjam</a>
+												<a href="https://www.fontsquirrel.com" target="_blank">FontSquirrel</a>
+											</td>
                         <td><p>Fonts are available for free download to use with Adobe, and HTML/CSS embed codes are provided as well.<br>
-                            Google Web Designer is useful for creating web ads and animations. MapJam allows sharing of maps.</p></td>
+                            Google Web Designer is useful for creating web ads and animations. MapJam allows sharing of maps.<br>
+													FontSquirrel has free fonts (TFF file) for download.</p></td>
                     </tr>
                     <tr>
                         <td><a href="http://meyerweb.com/eric/tools/css/reset/" target="_blank">CSS reset(Meyer)</a>
@@ -226,8 +234,10 @@
                         <a href="http://fontawesome.io/get-started/" target="_blank">Font Awesome</a>
                         <a href="https://docs.joeworkman.net/rapidweaver/stacks/foundation/content/font-awesome" target="_blank">FontAwesome w/Foundation</a>
                         <a href="http://www.fontpair.co" target="_blank">Font Pair</a>
+												<a href="http://fontforge.github.io/en-US/" target="_blank">Font Forge</a>
                         </td>
-                        <td><p>Web Safe Fonts reference. Font Awesome can be linked as a library inside HTML. Font Awesome with Foundation can be used to link social icons. Font Pair helps see how fonts work together.</p></td>
+                        <td><p>Web Safe Fonts reference. Font Awesome can be linked as a library inside HTML. Font Awesome with Foundation can be used to link social icons. Font Pair helps see how fonts work together.<br>
+												Font Forge is font editor.</p></td>
                     </tr>
                     <tr>
                         <td><a href="http://www.webpagefx.com/web-design/hex-to-rgb/" target="_blank">REX-RGB</a>
@@ -434,8 +444,10 @@
                         <td>Javascript Libraries</td>
                         <td><a href="http://dynamicsjs.com" target="_blank">DynamicJS</a>
 													<a href="http://requirejs.org" target="_blank">RequireJS</a>
+													<a href="https://d3js.org" target="_blank">3DJS</a>
 												</td>
-                        <td><p>DynamicJS is for physics effects. RequireJS is a JavaScript file and module loader.</p></td>
+                        <td><p>DynamicJS is for physics effects. RequireJS is a JavaScript file and module loader.<br>
+												3DJS is a JavaScript library for manipulating documents based on data.</p></td>
                         </tr>
 												<tr>
                         <td>Javascript Plugins</td>
