Added links to Google sources

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="#javascript">Javascript Libraries</a></li>
                     <li><a href="git">Git/Github</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="seo">SEO</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Separated link</a></li>
                     <li role="separator" class="divider"></li>
@@ -87,9 +87,12 @@
                     <a href="https://www.youtube.com/user/codingmath" target="_blank">Coding Math</a>
                     <a href="https://scotch.io" target="_blank">Scotch.io</a>
                     <a href="https://egghead.io" target="_blank">Egghead.io</a>
-										<a href="https://paulund.co.uk/c/tutorials" target="_blank">Paulund Tutorials</a></td>
+										<a href="https://paulund.co.uk/c/tutorials" target="_blank">Paulund Tutorials</a>
+										<a href="https://www.thesitewizard.com" target="_blank">The Site Wizard</a>
+										</td>
                     <td><p>Contains reference list of HTML/CSS/Javascript/SQL/PHP.Contains useful info with basic and short explanations.Short lessons include html5,css,php and javascript.<br>
-                    Useful videos on how to use math for coding. Scotch.io has tutorials on AngularJS, NodeJS, and other libraries. EggHead.io has courses for Redux,NodeJS, Elm and React.</p>
+                    Useful videos on how to use math for coding. Scotch.io has tutorials on AngularJS, NodeJS, and other libraries. EggHead.io has courses for Redux,NodeJS, Elm and React.<br>
+										The site wizard has many useful tutorials on various topics that are simple and quick to use.</p>
 									</td>
 
 									</tr>
@@ -161,14 +164,18 @@
                     <td><p>Third party services can help UX/UI or customer satisfaction.</p></td>
                     </tr>
                     <tr>
-                        <td><a href="http://iconmonstr.com" target="_blank">IconMonster</a>
+                        <td>
+												<a href="http://iconhandbook.co.uk/reference/" target="_blank">Icon Handbook</a>
+												<a href="http://convertico.com" target="_blank">Convertico</a>
+												<a href="https://icoconvert.com" target="_blank">IcoConvert</a>
+												<a href="http://iconmonstr.com" target="_blank">IconMonster</a>
                         <a href="http://glyphicons.com" target="_blank">Glyphicons</a>
                         <a href="https://unsplash.com" target="_blank">UnSplash</a>
                         <a href="http://line25.com/articles/12-free-repeating-pixel-patterns-for-photoshop" target="_blank">Pixel Patterns</a>
                         <a href="http://www.svgeneration.com" target="_blank">SVGeneration</a>
 												<a href="http://www.webhostinghub.com/glyphs/" target="_blank">WebHostingHub</a>
 											</td>
-                        <td><p>Free Icons.<br>
+                        <td><p>Free Icons.Create .ico files for favicons.<br>
                             Glyphicons has a basic free pack for social icons and paid packs for more formats and icons.<br>
                             UnPlash are free high res images. Useful pixel pattern pack. SVGeneration creates svg on browser.<br>
 													WebHostingHub glyphs can be added locally to apps or into html.</p></td>
@@ -305,12 +312,16 @@
                 <div class="col-md-12">
                     <table border="">
                     <tr>
-                        <td><a href="http://www.csshero.org/themes/divi/" target="_blank">CSS Hero</a></td>
-                        <td><p>In-Browser editing tool for wordpress and Divi from Elegant Themes.</p></td>
+											<td>Useful Info</td>
+                      <td><a href="http://www.csshero.org/themes/divi/" target="_blank">CSS Hero</a>
+												<a href="http://mockingbird.marketing/create-html-sitemap/" target="_blank">Mockingbird-WP-sitemap</a>
+											<a href="#" target="_blank">title</a>
+										</td>
+                      <td><p>In-Browser editing tool for wordpress and Divi from Elegant Themes.</p></td>
                     </tr>
                     <tr>
-                        <td><a href="#" target="_blank">Elegant Themes</a>
                         <td><a href="#" target="_blank">DiviBooster</a>
+													<a href="#" target="_blank">Elegant Themes</a>
                         </td>
                         <td><p>EG provides themes and plugins for wordpress.<br>
                             DiviBooster is a plugin the helps customize Divi Theme further. A few tricks include: <a href="https://divibooster.com/change-divi-image-gallery-grid-thumbnail-sizes/" target="_blank">Gallery Thumbnail sizes</a>.<br>
@@ -321,8 +332,16 @@
                         <td><p>Description</p></td>
                     </tr>
                     <tr>
-                        <td><a href="#" target="_blank">title</a></td>
-                        <td><p>Description</p></td>
+												<td>WP Hosting</td>
+                        <td><a href="https://kinsta.com/" target="_blank">Kinsta</a></td>
+                        <td><p>Kinsta is powered by Google and starts @ $100/mo for Business.</p></td>
+                    </tr>
+										<tr>
+											<td>Multisite</td>
+                      <td><a href="http://www.wpbeginner.com/glossary/multisite/" target="_blank">WPBeginner-What is WPMS</a>
+											<a href="#" target="_blank">title</a>
+										</td>
+                      <td><p>Useful info on WP Multisite.</p></td>
                     </tr>
                     <tr>
                         <td><a href="#" target="_blank">title</a></td>
@@ -513,6 +532,94 @@
         </section>
     </div><!--END container-->
    <!--Container master-->
+	 <div class="container"><!--Main container for anchor:copy and paste to create new-->
+			 <section>
+					 <div class="page-header text-center" id="design">
+							 <h2>Learn &amp;Explore<small> Useful websites for Design</small></h2>
+								<p>Resources for design &amp; web.</p>
+					 </div><!--end page-header-->
+					 <div class="row">
+							 <div class="col-md-12">
+									 <!--table goes here-->
+									<table border="">
+										<tr>
+											<!--tr row has column title, column links, column descriptions-->
+											<td>Image Dimensions</td>
+											<td><a href="https://makeawebsitehub.com/social-media-image-sizes-cheat-sheet/" target="_blank" >Cheat Sheet</a></td>
+											<td></td>
+										</tr>
+									</table>
+							 </div><!--END column-->
+					 </div><!--END row-->
+			 </section>
+	 </div><!--END container-->
+	 <!--END Container master-->
+	 <div class="container"><!--Main container for anchor:copy and paste to create new-->
+			 <section>
+					 <div class="page-header text-center" id="seo">
+							 <h2>Learn &amp;Explore<small> Useful websites for SEO</small></h2>
+								<p>Tutorials, Tips, Tricks.</p>
+					 </div><!--end page-header-->
+					 <div class="row">
+							 <div class="col-md-12">
+									 <!--table goes here-->
+									 <table border="">
+										 <tr>
+											 <!--tr row has column title, column links, column descriptions-->
+											 <td>Useful Info</td>
+											 <td><a href="https://mangools.com/blog/#.WHkuTldShU0" target="_blank">Mongools blog</a>
+												 <a href="http://mockingbird.marketing/site-map/" target="_blank">Mockingbird-SEO</a>
+												 <a href="http://mockingbird.marketing/where-is-my-traffic/" target="_blank">Mockingbird-Creating Traffic</a>
+												 <a href="http://mockingbird.marketing/site-speed-matters/" target="_blank">Mockingbird-Site Speed</a>
+												 <a href="http://mockingbird.marketing/holy-grail-seo-tools/" target="_blank">Mockingbird-Google Console</a>
+											 </td>
+											 <td>Blogs.</td>
+										 </tr>
+										 <tr>
+											 <!--tr row has column title, column links, column descriptions-->
+											 <td>Google Dev Tools</td>
+											 <td><a href="https://console.developers.google.com/" target="_blank">Google API</a>
+												 <a href="https://www.google.com/webmasters/tools" target="_blank">Google Console</a>
+												 <a href="https://www.google.com/analytics/#" target="_blank">Google Analytics</a>
+												 <a href="https://www.google.com/intl/bn/insidesearch/features/search/knowledge.html#" target="_blank">Google Knowledge Graph</a>
+											 </td>
+											 <td></td>
+										 </tr>
+										 <tr>
+											 <!--tr row has column title, column links, column descriptions-->
+											 <td>Keyword Search</td>
+											 <td><a href="https://adwords.google.com/home/tools/keyword-planner/" target="_blank">Google Keyword Planner</a></td>
+											 <td></td>
+										 </tr>
+										 <tr>
+											<!--tr row has column title, column links, column descriptions-->
+											<td>Site Tests</td>
+											<td><a href="https://www.webpagetest.org" target="_blank">WebPage Test</a>
+												<a href="https://whois.icann.org/en" target="_blank">WHOis ICANN</a>
+											</td>
+											<td>Speed tests, domain info look up.</td>
+										</tr>
+										 <tr>
+											 <!--tr row has column title, column links, column descriptions-->
+											 <td>Products &amp; Services</td>
+											 <td><a href="https://app.kwfinder.com" target="_blank">KwFinder</a>
+												 <a href="https://adwords.google.com/home/#?modal_active=none" target="_blank">Google AdWorks</a>
+												 <a href="http://www.bing.com/toolbox/webmaster" target="_blank">Bing Webmaster</a>
+											 </td>
+											 <td>All in one apps or services. KwFinder is free for 3 searches per day.</td>
+										 </tr>
+										 <tr>
+											 <!--tr row has column title, column links, column descriptions-->
+											 <td>Title</td>
+											 <td><a href="#" target="_blank">Link</a></td>
+											 <td></td>
+										 </tr>
+									 </table>
+							 </div><!--END column-->
+					 </div><!--END row-->
+			 </section>
+	 </div><!--END container-->
+	 <!--END Container master-->
     <div class="container"><!--Main container for anchor:copy and paste to create new-->
         <section>
             <div class="page-header text-center" id="feedback">
@@ -525,7 +632,9 @@
 										<table border="">
 											<tr>
 												<!--tr row has column title, column links, column descriptions-->
-												<td></td><td><a></a></td><td></td>
+												<td>Category</td>
+												<td><a href="#/" target="_blank">Link</a></td>
+												<td>Descriptions</td>
 											</tr>
 										</table>
                 </div><!--END column-->
